<resources>
    <string name="app_name">CST-338-project-2-su-25</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="username1">Username</string>
    <string name="password2">Password</string>
    <string name="sign_up1">Sign Up</string>
    <string name="back_to_login">Back to Login</string>
    <string name="welcome_to_revu">Welcome to Revu!</string>
    <string name="write_a_review">Write a Review</string>
    <string name="view_favorites">View Favorites</string>
    <string name="logout">Logout</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="movies">Movies</string>
    <string name="favorites">Favorites</string>
    <string name="no_favorites_added_yet">No favorites added yet!</string>
    <string name="filter_here">Filter Here</string>
    <string name="filter_favorites">Filter Favorites</string>
    <string name="Tv_shows">Tv Shows</string>
    <string name="Movies">Movies</string>
    <string name="addmediatitle">addMediaTitle</string>
    <string name="override_media_title">override</string>
    <string name="sample_title">Sample Title</string>
    <string name="rating_5_0">Rating: 5.0</string>
    <string name="this_is_a_sample_review_text">This is a sample review text.</string>
    <string name="favorite">Favorite</string>
    <string name="view_my_reviews">View my Reviews</string>
    <string name="welcome">Welcome!</string>
    <string name = "welcome_user">Welcome, %1$s!</string>
    <string name="welcome1">Welcome!</string>
    <string name="review_history">Review History</string>
    <string name="review_history1">Review History</string>
    <string name="register_as_admin">Register as Admin</string>
    <string name="admin">ADMIN</string>
    <string name="new_username">New Username</string>
    <string name="new_password">New Password</string>
    <string name="make_admin">Make Admin</string>
    <string name="create_user">Create User</string>
    <string name="create_new_user">Create New User</string>
    <string name="user_list_tap_to_delete">User List (Tap to delete)</string>
    <string name="view_delete_users">View/Delete Users</string>
    <string name="go_back_to_menu">Go Back to Menu</string>
    <string name="welcome_to_revu1">Welcome to Revu!</string>
    <string name="revu_logo">Revu Logo</string>
    <string name="item">Item</string>
    <string name="heart">❤️</string>
    <string name="add_to_favorites">Add to Favorites!</string>
    <string name="media_title">Media Title</string>
    <string name="Username">Username</string>
    <string name="sample_type">sample_type</string>
    <string name="this_is_where_the_review_text_is">This is where the review text is.</string>
    <string name="deletes_a_review">Deletes a Review</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="rating">Rating</string>
    <string name="view_all_reviews">View All Reviews</string>
    <string name="all_user_reviews">All User Reviews</string>
    <string name="back">BACK</string>
    <string name="back1">BACK</string>
    <string name="Back">BACK</string>
    <string name="no_favorites_yet">No favorites yet</string>
    <string name="tv_show_favorites">Tv Show Favorites</string>
    <string name="movie_favorites">Movie Favorites</string>
</resources>