<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_revu"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"/>
    <Button
        android:id="@+id/btnTvShows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_shows"
        android:layout_marginBottom="16dp"/>
    <Button
        android:id="@+id/btnMovies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/movies"
        android:layout_marginBottom="16dp"/>
    <Button
        android:id="@+id/btnViewFavorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_favorites"
        android:layout_marginBottom="16dp"/>
    <Button
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/logout"/>
    <Button
        android:id="@+id/btnViewReviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_my_reviews"
        android:layout_marginTop="16dp"/>

</LinearLayout>