<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/viewFavorites"
        android:layout_width="422dp"
        android:layout_height="70dp"
        android:gravity="center"

        android:background="@android:color/holo_red_dark"
        android:textColor="@color/white"
        android:text="@string/favorites"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnFilterFavorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/filter_here"
        app:layout_constraintTop_toBottomOf="@id/favoritesRecyclerView"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="40dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favoritesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@id/btnFilterFavorites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewFavorites"
        tools:listitem="@layout/favorites_recycler_item" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="BACK"
        android:textSize="26sp"
        app:layout_constraintEnd_toStartOf="@id/backToLoginFAB"
        app:layout_constraintTop_toBottomOf="@id/btnFilterFavorites" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backToLoginFAB"
        style="@android:style/Widget.ListView.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="@string/back_to_login"
        android:src="@android:drawable/ic_media_previous"
        app:backgroundTint="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnFilterFavorites" />


</androidx.constraintlayout.widget.ConstraintLayout>